# jenkinsexample

./: .gitignore  CMakeLists.txt  Jenkinsfile  helloWorld.cpp
